public/themes/frontend/assets/core.css
/* ... */
.tox .tox-editor-header {
	padding: 4px 0 4px !important;
	background-color: var(--mention-editor-bg-color) !important;
	box-shadow: var(--mention-editor-header-shadow) !important;
}

.tox .tox-toolbar-overlord {
	background-color: var(--mention-editor-bg-color) !important;
}

.tox .tox-tbtn {
	color: var(--mention-editor-text-color) !important;
}

.tox .tox-toolbar,
.tox .tox-toolbar__overflow,
.tox .tox-toolbar__primary {
	background: var(--mention-editor-bg-color) !important;
}

.tox .tox-edit-area__iframe {
	background-color: var(--mention-editor-bg-color) !important;
}

.tox:not([dir="rtl"]) .tox-toolbar__group:not(:last-of-type) {
	border-right: 1px solid transparent !important;
}

.tox .tox-toolbar__group {
	padding: 4px 6px 0 7px !important;
}

.tox .tox-tbtn {
	height: 28px !important;
}

.tox .tox-tbtn:hover {
	background-color: var(--mention-editor-btn-hover-bg-color) !important;
}

.tox-icon i,
.tox-collection__item-icon i {
	font-family: "Font Awesome 6 Free" !important;
	font-size: 17px !important;
}

.tox-icon i.fas,
.tox-collection__item-icon i.fas {
	font-weight: 900 !important;
}

.tox-icon i.far,
.tox-collection__item-icon i.far {
	font-weight: 400 !important;
}

.tox.tox-tinymce-aux .tox-toolbar__overflow .tox-icon i {
	font-size: 18px !important;
}

.tox .tox-tbtn svg {
	margin-top: 1px;
}

.tox .tox-tbtn--select {
	background: var(--mention-editor-btn-select-bg-color) !important;
	margin: 0 5px 0 0 !important;
	padding: 0 4px !important;
	height: 32px !important;
}

.tox.tox-tinymce-aux .tox-toolbar__overflow {
	border-radius: 10px !important;
	border: 2px solid var(--mention-light-border-color) !important;
	box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
}

.tox .tox-dialog {
	box-shadow: 0 16px 16px -10px rgba(34, 47, 62, .15), 0 0 40px 1px rgba(34, 47, 62, .15) !important;
	border-color: var(--mention-light-border-color) !important;
	border-radius: 10px !important;
	border-style: solid !important;
	border-width: 0 !important;
}

.tox .tox-dialog__footer {
	border-top: 0 !important
}

.tox .tox-button:not(:disabled) {
	border-radius: 6px !important;
}

.tox .tox-menu {
	border: 1px solid transparent !important;
	border-radius: 6px !important;
	box-shadow: 0 0 2px 0 rgba(34, 47, 62, .2), 0 4px 8px 0 rgba(34, 47, 62, .15) !important;
}

.tox .tox-collection--list .tox-collection__item--active {
	background-color: var(--mention-editor-btn-select-bg-color) !important;
}

.tox .tox-toolbar__overflow {
	padding: 0px 0 2px 0 !important;
}

.tox .tox-dialog {
	background-color: var(--mention-editor-bg-color) !important;
}

.tox .tox-dialog__header {
	background-color: var(--mention-editor-bg-color) !important;
	color: var(--mention-text-dark-color) !important;
}

.tox .tox-dialog__body {
	color: var(--mention-text-dark-color) !important;
}

.tox :not(svg):not(rect) p,
.tox :not(svg):not(rect):is(h1, h2, h3, h4, h5, h6) {
	background: transparent !important;
}

.table {
	color: var(--mention-table-text-color);
}

.table-striped tbody tr:nth-of-type(2n+1) {
	background: var(--mention-table-nth-bg-color);
}

.table-bordered,
.table-bordered td,
.table-bordered th {
	border: 1px solid var(--mention-table-border-color);
}

.table thead th {
	border-bottom: 2px solid var(--mention-dark-border-color);
}

#quote-pop .arrow {
	bottom: 0;
	left: 0;
	right: 0;
	margin: 0 auto;
}

#quote-pop a {
	color: var(--mention-tooltip-text-color);
}

#quote-pop a:before {
	font-family: "Font Awesome 6 Free";
	font-weight: var(--mention-root-font-weight-black);
	content: "\f3e5";
	margin-right: 5px;
}

.bs-popover-auto[x-placement^=right]>.arrow::after,
.bs-popover-right>.arrow::after {
	border-right-color: var(--mention-light-bg-color);
}

.bs-popover-auto[x-placement^=left]>.arrow::after,
.bs-popover-left>.arrow::after {
	border-left-color: var(--mention-light-bg-color);
}

.bs-popover-auto[x-placement^=top]>.arrow::after,
.bs-popover-top>.arrow::after {
	border-top-color: var(--mention-light-bg-color);
}

.bs-popover-auto[x-placement^=bottom]>.arrow::after,
.bs-popover-bottom>.arrow::after {
	border-bottom-color: var(--mention-light-bg-color);
}

.popover-body {
	color: var(--mention-text-dark-color);
}

.app-box {
	background-color: var(--mention-box-bg-color);
}

@keyframes pop-upwards {
	0% {
		transform: matrix(0.97, 0, 0, 1, 0, 12);
		opacity: 0;
	}

	20% {
		transform: matrix(0.99, 0, 0, 1, 0, 2);
		opacity: 0.7;
	}

	40% {
		transform: matrix(1, 0, 0, 1, 0, -1);
		opacity: 1;
	}

	70% {
		transform: matrix(1, 0, 0, 1, 0, 0);
		opacity: 1;
	}

	100% {
		transform: matrix(1, 0, 0, 1, 0, 0);
		opacity: 1;
	}
}

@-webkit-keyframes indeterminate {
	0% {
		left: -35%;
		right: 100%;
	}

	60% {
		left: 100%;
		right: -90%;
	}

	100% {
		left: 100%;
		right: -90%;
	}
}

@keyframes indeterminate {
	0% {
		left: -35%;
		right: 100%;
	}

	60% {
		left: 100%;
		right: -90%;
	}

	100% {
		left: 100%;
		right: -90%;
	}
}

@-webkit-keyframes indeterminate-short {
	0% {
		left: -200%;
		right: 100%;
	}

	60% {
		left: 107%;
		right: -8%;
	}

	100% {
		left: 107%;
		right: -8%;
	}
}

@keyframes indeterminate-short {
	0% {
		left: -200%;
		right: 100%;
	}

	60% {
		left: 107%;
		right: -8%;
	}

	100% {
		left: 107%;
		right: -8%;
	}
}

@media (min-width: 1200px) {
	.dropdown-menu.animate {
		top: initial !important;
	}

	.dropdown-menu-right.animate {
		left: initial !important;
		right: 0;
	}

	.app-admin .app-account-area .dropdown-menu.animate {
		top: 0px !important;
		left: 0px !important
	}

	.app-admin .app-account-area .dropdown-menu-right.animate {
		right: 0px !important
	}

	.dropdown {
		display: inline-block;
	}

	.container {
		max-width: 1190px;
	}

	.app-discuss-sub-menu .break,
	.app-profile-sub-menu .break {
		flex: 1;
	}

	.app-search {
		font-size: 14px;
	}
}
/* ... */

